# Computational-physics-II

./: .gitignore  README.md
Project_1/: README.md  environment.yml  pyproject.toml  vmc.sh
Project_1/data/: playground.csv
Project_1/src/optimizers/: __init__.py  gd.py  optimizer.py
Project_1/src/physics/: hamiltonians.py
Project_1/src/qs/: quantum_state.py
Project_1/src/qs/models/: __init__.py  vmc.py  vmc_fermions.py
Project_1/src/qs/utils/: parameter.py  pool_tools.py  sampler_utils.py  state.py
Project_1/src/samplers/: metro_fermions.py  metro_hast_fermions.py  metro_hastings.py  metropolis.py  sampler.py
Project_1/src/simulation_scripts/: bootstrap.py  config.py  delta_t.py  energy_vs_alpha.py  interactions.py  one_body.py  plot_producer.py  sample_stability.py  test.py  time_measures.py  vault.py  vmc_playground.py
Project_2/: .gitignore  README.md  pyproject.toml  vmc.sh
Project_2/NN/InteractiveNN/: NaiveNN_Optimization.ipynb  NaiveNN_Scaling.ipynb
Project_2/NN/InteractiveNN/module/: NaiveNN.py
Project_2/NN/NonInteractiveNN/: NaiveNN_Optimization.ipynb
Project_2/NN/NonInteractiveNN/module/: NaiveNN.py
Project_2/data/: N_particle_results.pkl
Project_2/src/optimizers/: gd.py
Project_2/src/physics/: hamiltonians.py  particle.py
Project_2/src/qs/: __init__.py  quantum_state.py
Project_2/src/samplers/: metro_fermions.py  metro_hastings.py  metropolis.py  sampler.py
Project_2/src/simulation_scripts/: bootstrap.py  config.py  energy_particle.py  grid_search.py  interaction_vs_particles.py  plot_producer.py  test.py  vmc_playground.py
(+9 files in other folders)
