[tool.poetry]
name = "Repo"
version = "0.1.0"
description = "Template for students undertaking Computational Physics II"
authors = ["Daniel <danielhaas.lima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.12"
matplotlib = "^3.7.2"
ipykernel = "^6.25.1"
pre-commit = "^3.3.3"
jax = "^0.4.14"
jaxlib = "^0.4.14"
pandas = "^2.0.3"
tqdm = "^4.66.1"
pathos = "^0.3.1"
colorlog = "^6.7.0"
seaborn = "^0.12.2"
numpy = "^1.25.2"
jupyter = "^1.0.0"
ipython = "^8.14.0"
pytest = "^7.4.2"
joblib = "^1.3.2"
simpy = "^4.1.1"
sympy = "^1.12"



[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
